Deleted leading Q: and A: as they are completely unnecessary and clutter up the page

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -2,53 +2,53 @@
 
 ==Introduction== 
 
-=== Q: What is Openmoko?  ===
-A: Openmoko is two things:
+===What is Openmoko?  ===
+Openmoko is two things:
 
 Openmoko is a Linux distribution designed for open mobile computing platforms, such as, but not limited to, cellphones.
 
 Openmoko is the company behind the Openmoko Linux distribution. Openmoko also manufactures mobile computing platforms, such as the Neo FreeRunner.
 
-=== Q: What is the [[Neo FreeRunner]]? === 
-A: The [[Neo FreeRunner]] is an open celllphone designed for the Openmoko Linux distribution. By open we mean that (a) all chips have been chosen to allow their drivers to be completely open sourced and (b) the schematics and the plastic (CAD) files are available as well.
+===What is the [[Neo FreeRunner]]? === 
+The [[Neo FreeRunner]] is an open celllphone designed for the Openmoko Linux distribution. By open we mean that (a) all chips have been chosen to allow their drivers to be completely open sourced and (b) the schematics and the plastic (CAD) files are available as well.
 
-=== Q: I'm a programmer. How do I join the Openmoko project? ===
+===I'm a programmer. How do I join the Openmoko project? ===
 
-A: Join one or more of the mailing lists. A great place to start is the community list.
+Join one or more of the mailing lists. A great place to start is the community list.
 
 Browse the wiki, and help improve it.
 
 Start or join an [[http://projects.openmoko.org/ Openmoko project]]
 
-=== Q: I'm not a programmer, but I have other skills. Can I join/help Openmoko? ===
+===I'm not a programmer, but I have other skills. Can I join/help Openmoko? ===
 
-A: Absolutely. If your a visual artist, you can help us with icons and other visuals. Musicians can help contribute ringtones and other sounds. Marketing? Sales? Information visualization? Join the community mailing lists, introduce yourself, and you'll soon find a place to put your skills to good use.
+Absolutely. If your a visual artist, you can help us with icons and other visuals. Musicians can help contribute ringtones and other sounds. Marketing? Sales? Information visualization? Join the community mailing lists, introduce yourself, and you'll soon find a place to put your skills to good use.
 
-=== Q: I'd like to develop a product (software application, custom hardware) based on Openmoko and/or the Neo FreeRunner. How do I get started? ===
+===I'd like to develop a product (software application, custom hardware) based on Openmoko and/or the Neo FreeRunner. How do I get started? ===
 
-A:  Send mail to michael@openmoko.org or to steve@openmoko.com
+ Send mail to michael@openmoko.org or to steve@openmoko.com
 
-=== Q: Where can I buy the [[Neo FreeRunner]]? ===
+===Where can I buy the [[Neo FreeRunner]]? ===
 
-A: www.openmoko.com. We sell both directly and through a growing list of distributors.
+www.openmoko.com. We sell both directly and through a growing list of distributors.
 
-=== Q: How much? === 
+===How much? === 
 
-A: If you buy directly from the Openmoko webshop you will pay USD $399 for the [[Neo FreeRunner]], USD $99 for the debug board. You can also purchase boxes of 10 FreeRunners at a price of USD $369 each. If you don't have a need for 10 units, you can join an existing or form a new group at [[Group_Sales]]. 
+If you buy directly from the Openmoko webshop you will pay USD $399 for the [[Neo FreeRunner]], USD $99 for the debug board. You can also purchase boxes of 10 FreeRunners at a price of USD $369 each. If you don't have a need for 10 units, you can join an existing or form a new group at [[Group_Sales]]. 
 
-=== Q: What are the features of the Neo FreeRunner? ===
+===What are the features of the Neo FreeRunner? ===
 
-A: Visit [[Neo FreeRunner]]
+Visit [[Neo FreeRunner]]
 
-=== Q: What can I do with the Neo FreeRunner? ===
+===What can I do with the Neo FreeRunner? ===
 
-A: The Neo FreeRunner is designed for everyday use by end users and for continued software development and improvements by the Openmoko team and the Openmoko community.
+The Neo FreeRunner is designed for everyday use by end users and for continued software development and improvements by the Openmoko team and the Openmoko community.
 
 The Openmoko software is not yet ready for everyday use.
 
-A: The question is almost what can you NOT do with this phone - eventually there will be a huge range of free software applications allowing both end users and developers to get much more out of this phone than a standard "locked" mobile phone using features like the integrated GPS, bluetooth, wifi and accelerometers.
+The question is almost what can you NOT do with this phone - eventually there will be a huge range of free software applications allowing both end users and developers to get much more out of this phone than a standard "locked" mobile phone using features like the integrated GPS, bluetooth, wifi and accelerometers.
 
-=== Q: Do I need the debug board? === 
+===Do I need the debug board? === 
 
 With the Neo FreeRunner and NO debug board you can do:
 * Kernel development
@@ -66,19 +66,19 @@ In summary, it is rare for a Neo FreeRunner user to require a debug board.
 
 To emphasize, the debug board is '''not''' required in order to develop applications, system software, or even kernel or device drivers. The debug board is '''not''' required in order to gain access to the source code or the development tools.
 
-=== Q: I have a shipping related question === 
+===I have a shipping related question === 
 
-A: Visit [http://www.openmoko.com/ openmoko.com]
+Visit [http://www.openmoko.com/ openmoko.com]
 
-=== Q: What else do I need to know? ===
+===What else do I need to know? ===
 
 * The Neo FreeRunner is a tri-band GSM phone. It is available in an 850/1800/1900MHz version for North America and a 900/1800/1900MHz version for the rest of the world.      
 
-=== Q: What are the benefits of an "open" phone over a "closed" phone ===
+===What are the benefits of an "open" phone over a "closed" phone ===
 
-A: In a conventional closed phone, the handset maker and the mobile network operator work together to provide a service to you that best suits their business model.    The capabilities of a modern smartphone equipped with GPS, Wifi and bluetooth are amazing and the result is that many features are "locked down" because they do not suit the network operator.    Up until now it has been difficult to buy a phone on which you have freedom to install sofware which is not controlled by the network operators - Openmoko changes that!
+In a conventional closed phone, the handset maker and the mobile network operator work together to provide a service to you that best suits their business model.    The capabilities of a modern smartphone equipped with GPS, Wifi and bluetooth are amazing and the result is that many features are "locked down" because they do not suit the network operator.    Up until now it has been difficult to buy a phone on which you have freedom to install sofware which is not controlled by the network operators - Openmoko changes that!
 
-A: A list of examples of "closed" behaviour has been started here - [[Problems of typical "closed" phones]]
+A list of examples of "closed" behaviour has been started here - [[Problems of typical "closed" phones]]
 
 == Getting Started with your Neo FreeRunner == <!-- Do not rename section! This section is linked from pages which linked to Getting_Started_FAQ. -->
 
@@ -166,10 +166,10 @@ The Openmoko project tree contains the folder 'data' where you can put any 128*1
 ==Software==
 
 
-=== Q: Can the software do/connect to/... ===
-A: Reviews of the latest "bleeding edge" daily builds of the Openmoko software stack can be seen [[Snapshot_review|here]]
+===Can the software do/connect to/... ===
+Reviews of the latest "bleeding edge" daily builds of the Openmoko software stack can be seen [[Snapshot_review|here]]
 
-A: At the moment, the answer to many other questions is "no". The phone is at the moment a small linux box with a touchscreen, a working dialer and some prototype apps.  Most do not function in any way that would be suitable for end-users.  If you want to add a feature or application request, then look over the existing [[Applications]] and either add one, or add a feature request to the applications page.
+At the moment, the answer to many other questions is "no". The phone is at the moment a small linux box with a touchscreen, a working dialer and some prototype apps.  Most do not function in any way that would be suitable for end-users.  If you want to add a feature or application request, then look over the existing [[Applications]] and either add one, or add a feature request to the applications page.
 
 ===Q: What software is on the phone?===
 At the moment, almost no 'end-user' applications are present and working in a usable state.
@@ -177,27 +177,27 @@ It is possible to make and receive calls in some software revisions, this freque
 
 ====Q: What software can be installed on the phone?====
 
-=== Q: Is there description and list of Openmoko software? ===
+===Is there description and list of Openmoko software? ===
 
-A: See Openmoko and [[OpenmokoFramework]]
+See Openmoko and [[OpenmokoFramework]]
 
-=== Q: Is it completely free software/open source? ===
+===Is it completely free software/open source? ===
 
-A: User space GPS/[[Gpsd]] will use a binary plugin for [[:Category:Neo1973 Hardware#AGPS|Hammerhead AGPS]] and [[:Category:Neo1973 Hardware#GSM.2FGPRS|GSM modem]] is separate subsystem connected to S3C2410 UART1. 
+User space GPS/[[Gpsd]] will use a binary plugin for [[:Category:Neo1973 Hardware#AGPS|Hammerhead AGPS]] and [[:Category:Neo1973 Hardware#GSM.2FGPRS|GSM modem]] is separate subsystem connected to S3C2410 UART1. 
 
 There are legal reasons why it is not possible to provide Open Source software for GPS and GSM modules.
 
 Otherwise it is completely free software. See [[MokoMakefile]] and [[Development resources]].
 
-=== Q: How do I install and manage software on Openmoko? ===
+===How do I install and manage software on Openmoko? ===
 
-A: ipkg: http://handhelds.org/moin/moin.cgi/Ipkg
+ipkg: http://handhelds.org/moin/moin.cgi/Ipkg
 
-=== Q: How can I compile programs for the Neo 1973 or the Neo FreeRunner? ===
+===How can I compile programs for the Neo 1973 or the Neo FreeRunner? ===
 
-A: See [[Toolchain]].
+See [[Toolchain]].
 
-=== Q: Is there an emulator available for Openmoko? ===
+===Is there an emulator available for Openmoko? ===
 
 For a lot of testing and development work, you don't actually need emulation as you can run Openmoko on a normal PC too. The emulators also aren't 100% accurate. That being said, there are several emulation options as described in the following.
 
@@ -236,15 +236,15 @@ Or use Xephyr directly with locally compiled programs (e.g. matchbox svn + openm
  openmoko-footer &
  openmoko-taskmanager &
 
-=== Q: Where can I find some type of tutorial for a 'Hello, world' on Openmoko? ===
+===Where can I find some type of tutorial for a 'Hello, world' on Openmoko? ===
 
-A: This should get you started:
+This should get you started:
 * [[Building_a_hello_world_application]]
 * http://www.gtk.org/documentation.html#Tutorials
 
-=== Q: Can PalmOS apps applications be ported to run on Openmoko? ===
+===Can PalmOS apps applications be ported to run on Openmoko? ===
 
-A: Making legacy apps written for the "Garnet" OS (née "Palm OS") run on Linux
+Making legacy apps written for the "Garnet" OS (née "Palm OS") run on Linux
 is decidedly non-trivial.
 
 PalmOS apps are in general very hard to simply 'port'. Particularly well-designed programs may make it possible.
@@ -255,16 +255,16 @@ It is possible that POSE, an emulator that simulates a Palm device on a Linux ho
 
 Hopefully emulation will be necessary only for M68000 code (pre-PalmOS 5) while native ARM programs can run natively under Linux, provided a proper set of PalmOS libraries and a .prc executable loader.
 
-=== Q: Does it have Java? ===
-A: It will have eventually, if you help us to get it working. Some good places to keep track of would be [http://projects.openmoko.org/projects/java-pkg/ projects.openmoko.org] and [https://phoneme.dev.java.net/ PhoneME].
+===Does it have Java? ===
+It will have eventually, if you help us to get it working. Some good places to keep track of would be [http://projects.openmoko.org/projects/java-pkg/ projects.openmoko.org] and [https://phoneme.dev.java.net/ PhoneME].
 
 Project [[https://wiki.evolvis.org/jalimo/index.php/Jalimo Jalimo]] is a project aiming to provide a Java stack on mobile devices. This project supports Openmoko.
 
-=== Q: What are the relevant X11 details? ===
+===What are the relevant X11 details? ===
 
-A: See [http://lists.openmoko.org/pipermail/community/2007-January/001353.html xdpyinfo output].
+See [http://lists.openmoko.org/pipermail/community/2007-January/001353.html xdpyinfo output].
 
-=== Q: Does Openmoko run on any other hardware? ===
+===Does Openmoko run on any other hardware? ===
 
 You can run it on your [[How_to_run_Openmoko_Apps_on_PC|PC]].  You may be able to run it on other [[Openmoko-supported_hardware | mobile platforms]]
 
@@ -272,61 +272,61 @@ You can run it on your [[How_to_run_Openmoko_Apps_on_PC|PC]].  You may be able t
 
 
 
-=== Q: Will it be possible to use popular VoIP applications such as Skype on the Openmoko platform? ===
+===Will it be possible to use popular VoIP applications such as Skype on the Openmoko platform? ===
 
-A:  Answer for the [[Neo1973]] - Perhaps. Hardware issues mean that it won't work well on the Neo1973. (the typical latency of GPRS is far too high). Also, Skype is a non-free software and binaries are not provided that would be suitable to run on a Neo. Skype's vendor could of course choose to provide binaries for Openmoko phones. However, this would not be desirable by Openmoko since it removes freedoms from the end-user. 
+ Answer for the [[Neo1973]] - Perhaps. Hardware issues mean that it won't work well on the Neo1973. (the typical latency of GPRS is far too high). Also, Skype is a non-free software and binaries are not provided that would be suitable to run on a Neo. Skype's vendor could of course choose to provide binaries for Openmoko phones. However, this would not be desirable by Openmoko since it removes freedoms from the end-user. 
 
-A: Answer for the [[Neo FreeRunner]].   Since it has WiFi the FreeRunner should be a good platform for VOIP use.    
+Answer for the [[Neo FreeRunner]].   Since it has WiFi the FreeRunner should be a good platform for VOIP use.    
 
 In either case please check for softphone apps ported to the Openmoko distribution at the [http://projects.openmoko.org/  projects] page. We need to focus efforts on free software. Not convincing non-free software companies to release binaries for our Neos.
 
-=== Q: Same question for Instant Messaging applications such as MSN Messenger? ===
+===Same question for Instant Messaging applications such as MSN Messenger? ===
 
-A: Very probably. MSN is closed source and will only run where Microsoft wants you to run it. But there are many Open Source IM clients, many of which have a plugin architecture and so support the use of more than one IM protocol, even simultaneously. One example is [http://www.pidgin.im  Pidgin, formerly called GAIM]. GPRS does induce a certain amount of latency but that should not be a problem for simple, text-oriented chat between parties. And the GTA02's WiFi  will make it even better.
+Very probably. MSN is closed source and will only run where Microsoft wants you to run it. But there are many Open Source IM clients, many of which have a plugin architecture and so support the use of more than one IM protocol, even simultaneously. One example is [http://www.pidgin.im  Pidgin, formerly called GAIM]. GPRS does induce a certain amount of latency but that should not be a problem for simple, text-oriented chat between parties. And the GTA02's WiFi  will make it even better.
 
 ==Neo1973 Hardware== 
 
-=== Q: What are the hardware specifications of Neo 1973 ? ===
+===What are the hardware specifications of Neo 1973 ? ===
 
-A: See page [[Neo1973_Hardware]] and category [[:Category:Neo1973 Hardware | Neo1973 Hardware]] and [[Disassembling Neo1973]]
+See page [[Neo1973_Hardware]] and category [[:Category:Neo1973 Hardware | Neo1973 Hardware]] and [[Disassembling Neo1973]]
 
-=== Q: How do I input text? ===
+===How do I input text? ===
 
-A: Use provided keyboard app.
+Use provided keyboard app.
 
-A: Use Bluetooth keyboard.
+Use Bluetooth keyboard.
 
-A: For more methods and ideas see [[Wishlist:Text_Input]].
+For more methods and ideas see [[Wishlist:Text_Input]].
 
-=== Q: Can I record calls and/or play audio files in calls? ===
+===Can I record calls and/or play audio files in calls? ===
 
-A: Yes, audio path from GSM to/from mic and speakers is completely controllable by user. For example recording calls (both sides) and implementing an [[Answering Machine]] is possible. Also using text->speech should be possible or modifying outgoing voice. Currently there is no software bundled in phone to do this.
+Yes, audio path from GSM to/from mic and speakers is completely controllable by user. For example recording calls (both sides) and implementing an [[Answering Machine]] is possible. Also using text->speech should be possible or modifying outgoing voice. Currently there is no software bundled in phone to do this.
 There are only 2 A/D inputs and three D/A outputs (one dedicated to the earpiece). This means that stereo audio playback cannot happen at the same time as the [[Answering Machine]] functionality, amongst other things. See the audio page. [[Neo1973_Audio_Subsystem|Neo1973 Audio Subsystem]]
 
-=== Q: What is the battery life? ===
+===What is the battery life? ===
 
-A: There has been no word on this so far, but see [[Neo1973 Power Management#Approximate_power_draw_of_various_subsystems|these estimates]] for a rough idea.  More information about the battery [[Neo1973 Battery|here]].
+There has been no word on this so far, but see [[Neo1973 Power Management#Approximate_power_draw_of_various_subsystems|these estimates]] for a rough idea.  More information about the battery [[Neo1973 Battery|here]].
 
 === USB ===
 
-==== Q: What can I do with the USB port on the Neo? ====
-A: Charge the phone, communicate with it over USB-serial, or USB-networking.
+====What can I do with the USB port on the Neo? ====
+Charge the phone, communicate with it over USB-serial, or USB-networking.
 
-A: Plug external devices, such as wifi, cameras, or mass-storage devices.
+Plug external devices, such as wifi, cameras, or mass-storage devices.
 
-==== Q: What can't I do with the USB? ====
+====What can't I do with the USB? ====
 
 The only limitation on current hardware seems to be no usb 2.0 support, which means slower communication with 2.0 devices.
 
-==== Q: Why is only USB 1.1 provided? ====
+====Why is only USB 1.1 provided? ====
 
-A: The processor has USB 1.1 built in. One with USB2 built in would have been more expensive, and might not be open.
+The processor has USB 1.1 built in. One with USB2 built in would have been more expensive, and might not be open.
 
-A: The FreeRunner has the same processor as the Neo1973.
+The FreeRunner has the same processor as the Neo1973.
 
-==== Q: Can the Neo charge and use devices on a USB hub at the same time? ====
+====Can the Neo charge and use devices on a USB hub at the same time? ====
 
-A: 
+
 *When the Neo is connected to a device port on a USB hub, it will start charging. If the hub is a powered hub, then it will charge fast (3h), otherwise around 12h.
 
 *If you plug the Neo into the host port of a USB hub you can use devices on that hub but the Neo will not charge. (Some/many USB hubs will not accept an unpowered host as valid, hence the need for the below cable.)
@@ -345,69 +345,69 @@ The Charger/USB device plug only has +5V and 0V connected in the simple cable, w
 
 For a more complex cable, when the host socket is not plugged in, the cable acts as a simple USB cable.
 
-==== Q: What are the details of the USB port on the Neo? How does it compare to USB On-The-Go? ====
+====What are the details of the USB port on the Neo? How does it compare to USB On-The-Go? ====
 
-A: The Neo will have mini-USB-B, and will be able to function as either a host or a device. It will NOT be USB On-The-Go.  OTG is a complex specification, and it comprises way more than just
+The Neo will have mini-USB-B, and will be able to function as either a host or a device. It will NOT be USB On-The-Go.  OTG is a complex specification, and it comprises way more than just
 an AB socket, but also electrical and software components which cannot be provide by the S3C2410.
 
 You will need a special Mini-B to regular-B cable (note that this won't actually comply with the USB standard:  a compliant cable has to have an A or Mini-A plug on one end, and B or Mini-B on the other).
 
-=== Q: Will a JTAG port be made available? ===
+===Will a JTAG port be made available? ===
 
-A:  Included with purchase of The "Hacker's Lunchbox" (Advanced version).
+ Included with purchase of The "Hacker's Lunchbox" (Advanced version).
 
 There are [[Neo1973_Hardware#Changes_from_GTA01Bv3|exposed I2C, SPI and debug board connectors]] inside case in all versions and [[Debug Board|Debug Board v2]] (JTAG and serial console) in Advanced version. [[Connecting Neo1973 with Debug Board v2]] explains how to connect it to the phone.
 
-=== Q: Will the JTAG interface that comes with GTA01 be compatible with GTA02?  ===
+===Will the JTAG interface that comes with GTA01 be compatible with GTA02?  ===
 
-A: Yes
+Yes
 
-=== Q: What can we expect in future versions? ===
+===What can we expect in future versions? ===
 
-A: A faster CPU, faster GSM (EDGE?) perhaps even powered USB port, USB2, wifi, and camera. No details have been released yet. More details of hardware upgrades should be available sometime in May. There will also be 5 more Openmoko devices - some not phones in the traditional sense - announced by FIC in September.
+A faster CPU, faster GSM (EDGE?) perhaps even powered USB port, USB2, wifi, and camera. No details have been released yet. More details of hardware upgrades should be available sometime in May. There will also be 5 more Openmoko devices - some not phones in the traditional sense - announced by FIC in September.
 
-=== Q: Are microSDHC-cards like this[1] supported? ===
+===Are microSDHC-cards like this[1] supported? ===
 
 [1] http://www.amazon.de/Secure-Digital-Card-microSDHC-8192MB/dp/B0019XICD4/ref=pd_sbs_pc_15
 
 ==Networking/Connectivity==
 
-=== Q: What kind of connectivity? ===
+===What kind of connectivity? ===
 
-A: Tri-band GSM (commonly known as "European tri-band", 900/1800/1900 MHz), GPRS Class12/CS4 2.5G (Not EDGE), Bluetooth 2.0 EDR, USB in all versions. WiFi: Atheros AR6K in [[GTA02#.22Phase_2.22_.28GTA02.2C_.22Mass_Market.22.29|GTA02]]. (No 3G in year 2007 models)
+Tri-band GSM (commonly known as "European tri-band", 900/1800/1900 MHz), GPRS Class12/CS4 2.5G (Not EDGE), Bluetooth 2.0 EDR, USB in all versions. WiFi: Atheros AR6K in [[GTA02#.22Phase_2.22_.28GTA02.2C_.22Mass_Market.22.29|GTA02]]. (No 3G in year 2007 models)
 
-=== Q: Can I bridge to an Ethernet (wired or unwired) network via a suitable Bluetooth enabled router? ===
+===Can I bridge to an Ethernet (wired or unwired) network via a suitable Bluetooth enabled router? ===
 
-A: Yes - see [http://gentoo-wiki.com/HOWTO_Configure_a_bluetooth_network_access_point this howto for how to configure a linux computer to act as such a router] and [[Bluetooth Support]].
+Yes - see [http://gentoo-wiki.com/HOWTO_Configure_a_bluetooth_network_access_point this howto for how to configure a linux computer to act as such a router] and [[Bluetooth Support]].
 
-=== Q: What providers provide the GSM required for Neo1973, or FreeRunner? ===
+===What providers provide the GSM required for Neo1973, or FreeRunner? ===
 
-A: See [[Neo1973 compatible cellphone providers]]
+See [[Neo1973 compatible cellphone providers]]
 
-=== Q: Will Openmoko "Just Work" with Mac OS X? ===
+===Will Openmoko "Just Work" with Mac OS X? ===
 
-A: There has been some discussion of this on the mailing list. There is motivation, and there are interested developers. 
+There has been some discussion of this on the mailing list. There is motivation, and there are interested developers. 
 Not being a Mac OS X user, I don't know enough
 to summarize the discussion to answer this question. Can someone please fill in?
 
-A: For IP over USB cable connectivity, it is planned to improve/adapt the AJZaurusUSB driver, allowing ssh into the Openmoko.
+For IP over USB cable connectivity, it is planned to improve/adapt the AJZaurusUSB driver, allowing ssh into the Openmoko.
 
-A: It is expected that (Bluetooth/UB) SyncML based interoperation for
+It is expected that (Bluetooth/UB) SyncML based interoperation for
 contacts and events can easily be achieved by a patch
 to the Apple iSync configuration tables.
 
-A: There is an open source implementation of Cocoa (GNUstep) that aims to run MacOS X compatible applications (sort of
+There is an open source implementation of Cocoa (GNUstep) that aims to run MacOS X compatible applications (sort of
 PPC/x86/ARM universal binaries) on Openmoko devices: mySTEP.
 
 ==Misc==
 
-=== Q: On the lists on lists.openmoko.org, should replies be added above or below the original text? ===
+===On the lists on lists.openmoko.org, should replies be added above or below the original text? ===
 
-A: Please reply UNDER post.
+Please reply UNDER post.
 
-=== Q: How can I find out if a question or topic has already been discussed on the mailing lists? ===
+===How can I find out if a question or topic has already been discussed on the mailing lists? ===
 
-A: By searching the mailing list archives. For example, using Google searches:
+By searching the mailing list archives. For example, using Google searches:
 
  site:openmoko.org text
 
@@ -426,9 +426,9 @@ For example to search for "release date" from FIC people:
 
 Alternatively you can use the [http://www.google.com/coop/cse?cx=018430699993342716089%3Aszsaurhronw custom Openmoko search engine] that is using [http://www.google.com/coop/ Google Co-op].
 
-=== Q: how many dead pixels may the LCM have before calling it defect? ===
+===how many dead pixels may the LCM have before calling it defect? ===
 
-A: the answer for the display used in GTA01 and GTA02 is '2'
+The answer for the display used in GTA01 and GTA02 is '2'
 
 =Historical=
 The Neo1973 was last available in Febuary 2008. 
