/* How can I compile programs for the Neo 1973 or the Neo FreeRunner? */

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -193,7 +193,7 @@ Otherwise it is completely free software. See [[MokoMakefile]] and [[Development
 
 ipkg: http://handhelds.org/moin/moin.cgi/Ipkg
 
-===How can I compile programs for the Neo 1973 or the Neo FreeRunner? ===
+===How can I compile programs for the Neo FreeRunner? ===
 
 See [[Toolchain]].
 
