--- a/Main_Page%2Ffi.mw
+++ b/Main_Page%2Ffi.mw
@@ -1,71 +1,23 @@
 {{Languages|Main Page}}
 __NOTOC__
-__NOEDITSECTION__ [[Image:Freerunner02.gif|thumb|150px|right|Neo FreeRunners]]
+__NOEDITSECTION__ [[Image:Freerunner02.gif|thumb|150px|right|Neo FreeRunnereita]]
 
 <div style="padding: 2.5ex; text-align: center; font: bold x-large sans">Openmoko™ - Avoin. Mobiili. Vapaa.</div>
 
 
 ==<font color=75d806>Johdanto Openmokoon</font>==
 
+Openmoko™ syntyi [[License| GPL- ja LGPL-lisenssien]] alaisena [http://fi.wikipedia.org/wiki/Vapaa_ohjelmisto vapaan lähdekoodin] projektina, ja on omistautunut avoimen ohjelmistopinon tuomiseen mobiililaitteille. Myöhemmin projektista tuli oma yrityksensä, jonka tavoitteena on Openmoko-ohjelmapinoon pohjautuvien mobiilituotteiden luominen: avoimesti, mobiilisti ja vapaasti.
 
-[[Image:OpenmokoFramework08.png|250px|left|Openmokon ohjelmistopino|thumb]]
-
-Openmoko™ syntyi [[License| GPL- ja LGPL-lisenssien]] alaisena [http://fi.wikipedia.org/wiki/Vapaa_ohjelmisto vapaan lähdekoodin] projektina, ja on omistautunut avoimen ohjelmistopinon tuomiseen mobiililaitteille. Ensimmäisen tuotteen, Neo 1973:n, toimitukset alkoivat 9. heinäkuuta 2007. Tämän jälkeen projektista tuli oma yrityksensä, jolla tavoitteena on loistavien Openmoko-ohjelmapinoon pohjautuvien mobiilituotteiden luominen: avoimesti, mobiilisti ja vapaasti.
-
-Täyden [[Host-based development with Xoo and Xephyr|X-palvelimen]] sisältämä [[NeoSoftwareStack|Openmoko-ohjelmapino]] mahdollistaa mobiililaitealustojen muuntamisen ainutlaatuisiksi tuotteiksi käyttäjien ja kehittäjien toimesta. Openmokon lisenssi sallii käyttäjille ja kehittäjille vapaudet "raudasta fiilikseen", vapaudet mukauttaa laitetta joko kosmeettisesti tai radikaalisti pakkaa sekoittaen; vaihda tapettia tai rakenna koko talo uusiksi! Lisenssi sallii myös vapaudet esimerkiki muuntaa puhelin lääketieteen instrumentiksi, lähimarketin hyllylle myytäväksi tai yksinkertaisesti vapauden asentaa kunkin käyttäjän suosikkiohjelmistot. Laitteiden ohjelmistojen vapauttamisen lisäksi projekti on julkaissut laitteiden CAD-suunnittelutiedostot vapaalla Creative Commons ShareAlike -lisenssillä. Tekemällä ohjelmista vapaita GPL-lisenssin myötä, VALO-yhteisön kehittäjät voivat tehdä kaiken uusiksi halutessaan. Vapauttamalla [http://downloads.openmoko.org/CAD/ CAD]-tiedostot teolliset muotoilijat ja insinöörit saavat tämän saman mahdollisuuden.
+[[NeoSoftwareStack|Openmoko-ohjelmapino]] mahdollistaa mobiililaitealustojen muuntamisen ainutlaatuisiksi tuotteiksi käyttäjien ja kehittäjien toimesta. Openmokon lisenssi sallii käyttäjille ja kehittäjille vapaudet "raudasta fiilikseen", vapaudet mukauttaa laitetta joko kosmeettisesti tai radikaalisti pakkaa sekoittaen; vaihda tapettia tai rakenna koko talo uusiksi! Lisenssi sallii myös vapaudet esimerkiki muuntaa puhelin lääketieteen instrumentiksi, lähimarketin hyllylle myytäväksi tai yksinkertaisesti vapauden asentaa kunkin käyttäjän suosikkiohjelmistot. Laitteiden ohjelmistojen vapauttamisen lisäksi projekti on julkaissut laitteiden CAD-suunnittelutiedostot vapaalla Creative Commons ShareAlike -lisenssillä. Tekemällä ohjelmista vapaita GPL-lisenssin myötä, VALO-yhteisön kehittäjät voivat tehdä kaiken uusiksi halutessaan. Vapauttamalla [http://downloads.openmoko.org/CAD/ CAD]-tiedostot teolliset muotoilijat ja insinöörit saavat tämän saman mahdollisuuden.
 
 '''Hei myös kaikki suomalaiset! Suomalaisia Openmoko-käyttäjiä sekä muuta tietoa löydät sivultamme [[Openmoko Local Groups: Finland]].'''
 
-{{mainpage/fi}}
- 
 ==<font color=75d806>Openmoko-tuotteet</font>==
 
-[[Image:FreeRunner02.gif|thumb|150px]]
-Ensimmäistä Openmoko-tuotetta [[Neo1973]]:ta myytiin ainostaan suoraan [http://www.openmoko.com/store.html Openmoko-verkkokaupan] kautta. Se loppuunmyytiin helmikuussa 2008.
-
-Openmoko alkoi myydä Neon toista sukupolvea Neo FreeRunneria (GTA02) 3. heinäkuuta 2008. Se on ostettavissa [http://www.openmoko.com/store.html Openmoko-verkkokaupan] kautta tai maakohtaisilta jälleenmyyjiltä. Ryhmätilauksia käyttämällä voi saada alennuksia tai ylimääräisiä varusteita. Löydä oma ryhmäsi [[GroupSales|ryhmätilaussivulta]].
+Ensimmäinen Openmoko-tuote [[Neo1973]] loppuunmyytiin helmikuussa 2008. Sitä myytiin ainoastaan suoraan Openmoko-verkkokaupan kautta. Openmoko alkoi myydä Neon toista sukupolvea [[Neo FreeRunner]]ia (GTA02) 3. heinäkuuta 2008. Se on ostettavissa [http://www.openmoko.com/distributors.html Openmoko-verkkokaupasta tai maakohtaisilta jälleenmyyjiltä].
 
 Jos olet juuri vastaanottanut FreeRunnerisi, katso vinkkejä sen käyttöön sivulta [[Getting Started with your Neo FreeRunner|Neo FreeRunnerin käytön aloittaminen]].
-
-<div style="clear:both">{{Bar}}</div>
-
-==<font color=75d806>Tule mukaan Openmokon kehittämiseen</font>==
-
-{| class="wikitable" cellspacing="4" cellpadding="6" width=100%
-! width=50% style="background:#ff6600;border-left:5px solid white;border-right:5px solid white;border-top:0px solid white; border:1px solid #ff6600; " | <font color="white" >Kehittäjän oppaat</font>
-! width=50% style="background:#ff6600;border-left:5px solid white;border-right:5px solid white;border-top:0px solid white; border:1px solid #ff6600;" |<font color="white" >Testaus, emulointi ja projektien jakaminen</font>
-|-
-|valign="top" style="background:#333333;border-left:5px solid white;border-right:5px solid white;border-bottom:0px solid white; border:1px solid #cccccc; " | 
-===<font color=white>Kehittäjät </font>===
-* [[Toolchain|toolchain usage]]
-* <font color=white>VMware</font>
-* [[Python|python intro]]
-* [[Openmoko under QEMU]] 
-
-===<font color=white>Järjestelmän integrointi ja jakelun mukauttaminen</font>===
-* [[OpenEmbedded|OE-The distribution building framework]]
-* [[MokoMakefile|Building Openmoko using the MokoMakefile ]]
-* [[Opkg|Opkg]]
-===<font color=white>Alimman tason järjestelmäkehitys</font>===
-* <font color=white>Low-Level</font>
-* [[u-boot]]  <font color=white>-The bootloader we use, including docs to our modifications</font>
-* [[kernel]]  <font color=white>-The Linux Kernel we use, including docs to our modifications</font>
-* [[gsmd]] <font color=white> -the GSM daemon managing the GSM Modem</font>
-* [[agpsd]] <font color=white>-the AGPS (Assisted GPS) daemon</font>
-
-|valign="top" style="background:#333333;border-left:5px solid white;border-right:5px solid white;border-bottom:0px solid white; border:1px solid #cccccc; " |
-===<font color=white>Testaus</font>===
-*[[Test Cases]]
-<font color=white> ※</font> [[:Category: Test |  See More About Test]]
-
-===<font color=white>Emulointi</font>===
-*[[Getting Openmoko working on host with Xephyr]]
-*[[Test_Openmoko Emulation with chroot image]]
-===<font color=white>Projektien julkaiseminen</font>===
-*[[CommunityRepository|Projektien julkaiseminen]]
-===<font color=white>Jakelut</font>===
-*[[Distributions|Jakelut]]
-|}
 
 ==<font color=75d806>Openmoko-yhteisö</font>==
 Kuka tahansa voi tulla Openmoko-projektiin mukaan ja tuoda oman panoksensa avoimien tuotteiden suunnitteluun. Liity mukaan ja tee yhteistyötä eri [[Development resources | projektin tarjoamien resurssien]] kautta, joihin lukeutuu tämä Openmoko-wiki. Lisätietoja tähän wikiin sisällön luomisesta [[Help:Contents | wikin muokkaamisen ohjesivulta]]. 
@@ -109,6 +61,43 @@ Voit lähteä liikkeelle [[introduction|johdantosivulta]], valokuvista, videoist
 
 |}
 
+==<font color=75d806>Tule mukaan Openmokon kehittämiseen</font>==
+
+{| class="wikitable" cellspacing="4" cellpadding="6" width=100%
+! width=50% style="background:#ff6600;border-left:5px solid white;border-right:5px solid white;border-top:0px solid white; border:1px solid #ff6600; " | <font color="white" >Kehittäjän oppaat</font>
+! width=50% style="background:#ff6600;border-left:5px solid white;border-right:5px solid white;border-top:0px solid white; border:1px solid #ff6600;" |<font color="white" >Testaus, emulointi ja projektien jakaminen</font>
+|-
+|valign="top" style="background:#333333;border-left:5px solid white;border-right:5px solid white;border-bottom:0px solid white; border:1px solid #cccccc; " | 
+===<font color=white>Kehittäjät </font>===
+* [[Toolchain|toolchain usage]]
+* <font color=white>VMware</font>
+* [[Python|python intro]]
+* [[Openmoko under QEMU]] 
+
+===<font color=white>Järjestelmän integrointi ja jakelun mukauttaminen</font>===
+* [[OpenEmbedded|OE-The distribution building framework]]
+* [[MokoMakefile|Building Openmoko using the MokoMakefile ]]
+* [[Opkg|Opkg]]
+===<font color=white>Alimman tason järjestelmäkehitys</font>===
+* <font color=white>Low-Level</font>
+* [[u-boot]]  <font color=white>-The bootloader we use, including docs to our modifications</font>
+* [[kernel]]  <font color=white>-The Linux Kernel we use, including docs to our modifications</font>
+* [[gsmd]] <font color=white> -the GSM daemon managing the GSM Modem</font>
+* [[agpsd]] <font color=white>-the AGPS (Assisted GPS) daemon</font>
+
+|valign="top" style="background:#333333;border-left:5px solid white;border-right:5px solid white;border-bottom:0px solid white; border:1px solid #cccccc; " |
+===<font color=white>Testaus</font>===
+*[[Test Cases]]
+<font color=white> ※</font> [[:Category: Test |  See More About Test]]
+
+===<font color=white>Emulointi</font>===
+*[[Getting Openmoko working on host with Xephyr]]
+*[[Test_Openmoko Emulation with chroot image]]
+===<font color=white>Projektien julkaiseminen</font>===
+*[[CommunityRepository|Projektien julkaiseminen]]
+===<font color=white>Jakelut</font>===
+*[[Distributions|Jakelut]]
+|}
 
 ==<font color=75d806>Openmokon wikin kanssa alkuun pääsy</font>==
 Openmoko-wiki on avoin, kuka tahansa voi osallistua. Sivuilta löytyy tietoa muun muassa laitteistosta ja ohjelmistoista, virheraporteista, Openmoko-yhteisöä koskevista uutisista ja monesta muusta. Liity wikin muokkaajiin, muut arvostavat tuottamaasi sisältöä ja pääset auttamaan muita yhteisön jäseniä. Kokonaiskuvan wikin sisällöstä löydät [[Openmoko Wiki Official Index Page|Openmoko-wikin viralliselta hakemistosivulta]].  
