--- a/Main_Page%2Ffi.mw
+++ b/Main_Page%2Ffi.mw
@@ -36,12 +36,12 @@ Voit lähteä liikkeelle [[introduction|johdantosivulta]], valokuvista, videoist
 *[[GroupSales|Ryhmätilaukset]]
 *[[Why Openmoko|Miksi Openmoko on ykkösvalinta: vertaileva katselmus]]
 ===<font color=white>Tilannevedokset</font>===
-*<font color=white>Uusimman ohjelmiston löydät aina näistä osoitteista.</font>
+*<font color=white>2008.08-jakelun suositellut ytimet ja juurikuvat ovat aina saatavissa [http://downloads.openmoko.org/releases/Om2008.8-update/ täältä].</font>
+*<font color=white>Vanhemman 2007.02-jakelun löydät aina näistä osoitteista:</font>
 ** <font color=white>FreeRunnerille </font>[http://buildhost.openmoko.org/daily/freerunner/ http://buildhost.openmoko.org/daily/freerunner/]
 ** <font color=white>Neo 1973:lle </font> [http://buildhost.openmoko.org/daily/neo1973/ http://buildhost.openmoko.org/daily/neo1973/]
-** <font color=white>Työkalut, kuten dfu-util ja openocd: </font>[http://buildhost.openmoko.org/daily/tools/ http://buildhost.openmoko.org/daily/tools/]
-*<font color=white>Arvioita päivittäisistä tilannevedoksista [[Snapshot_review|täällä]]. Arvioiden perusteella suositellut ytimet ja juurikuvat ovat aina saatavissa [http://downloads.openmoko.org/recommended/ täältä].</font>
-<font color=white>Huomioi, että suositeltu ohjelmisto ei ole aina uusin, mutta se on vakain, luotettavin ja toimivin.</font>
+**<font color=white>Arvioita päivittäisistä tilannevedoksista [[Snapshot_review|täällä]].
+
 |valign="top" style="background:#333333;border-left:5px solid white;border-right:5px solid white;border-bottom:0px solid white; border:1px solid #cccccc; " |
 
 ===<font color=white>Tuoreet yhteisöasiat</font>===
