/* Running X as normal user */

--- a/Debian.mw
+++ b/Debian.mw
@@ -117,7 +117,7 @@ First you need to create a user
 </pre>
 Then you need to stop zhone-session and disable it on boot
 <pre>
-# /etc/init.d/zhone-session
+# /etc/init.d/zhone-session stop
 # update-rc.d -f zhone-session remove
 </pre>
 
